--- a/src/sass/config/_functions.sass
+++ b/src/sass/config/_functions.sass
@@ -1,1 +1,7 @@
-// @function color
+@use 'variables' as *
+
+@function color($key)
+  @if map-has-key($colors, $key)
+    @return map-get($colors, $key)
+  @warn 'Unknown `#{$key}` in colors.'
+  @return null
